# Personal-AI-Agent

./: .gitignore  Dockerfile  README.md  desktop_app.spec  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md
src/application/: agent_workflow.py  chat_use_case.py
src/application/action_engine/: __init__.py  engine.py
src/application/multi_agent/: workflow.py
src/application/services/: security_manager.py
src/application/tools/: app_agent_tools.py  app_launcher.py  browser_tools.py  desktop_parser.py  devops_tools.py  memory_tools.py  personal_assistant_tools.py  planner_tools.py  registry.py  routing_tools.py  security_tools.py  system_time.py  system_tools.py  vision_tools.py
src/application/voice/: voice_assistant.py
src/config/: settings.py
src/domain/: entities.py
src/domain/interfaces/: action_engine.py  agent.py  llm.py  (+7 more)
src/interface/: __init__.py
src/utils/: logging.py
tests/: test_action_engine.py  test_agent_workflow.py  test_app_agent_tools.py  test_app_launcher.py  test_browser_service.py  test_browser_tools.py  test_chat_use_case.py  test_config.py  test_desktop.py  test_desktop_parser.py  test_devops_agent.py  test_gemini.py  test_logging.py  test_memory_service.py  test_memory_tools.py  test_multi_agent.py  test_ollama.py  test_performance.py  test_personal_assistant_tools.py  test_planner_service.py  test_registry.py  test_security.py  test_sqlite_repo.py  test_system_service.py  test_system_tools.py  test_tools.py  test_vision_tools.py  test_voice_assistant.py  test_voice_service.py
(+14 files in other folders)
