[project]
name = "personal-ai-agent"
version = "0.1.0"
description = "A production-grade Personal AI Assistant built with Clean Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "langgraph>=0.1.0",
    "psutil>=5.9.0",
    "playwright>=1.40.0",
    "SpeechRecognition>=3.10.0",
    "sounddevice>=0.4.6",
    "gTTS>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]
